scripts/components/link-edit-component/link-edit-component.scss
// stylelint-disable declaration-no-important

.es-link-edit-component {
	&__url-field {
		.block-editor-url-input__input {
			border: 1px solid var(--es-admin-cool-gray-500) !important;
			border-radius: 0.25rem !important;
			width: 100% !important;
			height: 2.25rem !important;
			padding: 0.5rem;
		}
	}
}

// stylelint-enable declaration-no-important

